--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   "dependencies": {
     "eslint-plugin-react-hooks": "^2.2.0",
     "expo": "^35.0.0",
+    "expo-linear-gradient": "~7.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-reanimated": "^1.2.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
-    "expo-linear-gradient": "~7.0.0"
+    "react-navigation-tabs": "^2.5.6"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
